Display album artwork on small screens, fix buttons not centered on small screens
Previously album artwork was not displayed on small screens. The artwork
is now displayed but in a smaller size. Additionally fixed buttons not
being centered when switching to the mobile layout on small screens.

--- a/src/views/Browse.scss
+++ b/src/views/Browse.scss
@@ -271,11 +271,20 @@ $topbar-height: 45px;
         .wrapper {
             .content {
                 .album {
+                    flex-flow: column nowrap;
                     text-align: center;
-                    justify-content: center;
+                    align-items: center;
 
                     .artwork {
-                        display: none;
+                        margin: 0 0 2em;
+                        width: 100px;
+                        height: 100px;
+                    }
+
+                    .info {
+                        display: flex;
+                        flex-flow: column nowrap;
+                        align-items: center;
                     }
                 }
             }
